<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emmtek_Map</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_locate">Get Data</string>
    <string name="sms_send_message">PUSHSMS</string>
    <string name="http_ref_string">http</string>
    <string name="lat_ref_string">Lat</string>
    <string name="lon_ref_string">Lon</string>
    <string name="speed_ref_string">Speed</string>
    <string name="time_ref_string">Time</string>
    <string name="voltage_ref_string">VIN</string>
    <string name="dialog_latitude_text">Latitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="speed">Speed</string>
    <string name="voltage">Voltage</string>
    <string name="action_geofence">Geofence Settings</string>
    <string name="action_locationdata">Location Data</string>
    <string name="action_phonenumber">SMS Phone Number</string>

    <!-- Items in order from the server push -->
    <string-array name="serverpushpreferenceitems">
        <item>DeviceName</item>
        <item>Imei</item>
        <item>Time</item>
        <item>Lat</item>
        <item>Lon</item>
        <item>Speed</item>
        <item>Vin</item>
        <item>Vstatus</item>
        <item>A1</item>
        <item>A1status</item>
        <item>A2</item>
        <item>A2Status</item>
        <item>A3</item>
        <item>A3Status</item>
        <item>D1</item>
        <item>D1Status</item>
        <item>D2</item>
        <item>D2Status</item>
        <item>Relay1</item>
        <item>Relay2</item>
        <item>Out1</item>
        <item>Out2</item>
        <item>MoveStatus</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
